--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+      
   </body>
+  <script src="https://sdk.cashfree.com/js/ui/2.0.0/cashfree-ui.js"></script>
 </html>
